# fei-cc2632-tasks

./: CMakeLists.txt  README.md  main.c
core/: create_task.c
core/create/: create_task.c  create_task.h
core/list/: list_task.h  list_tasks.c
helpers/: helpers.c  helpers.h
models/task/: Task.c  Task.h
